# friends

./: README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 757148be5792_init.py  7b3cf43f988f_add_email_to_user.py  866998355d04_add_password_to_user.py  cea7ec7d871f_add_message_model.py  f5c967637363_add_post_model.py  fd0fc8f1ac39_make_emails_unique_column.py
models/: __init__.py  friends.py  message.py  post.py  user.py
repository/: post.py  user.py
routers/: auth.py  deps.py  post.py
